# BoardToe

./: CHANGELOG.md  CONCEPTS.md  __init__.py  constructor.py  pyproject.toml
AI/: core.py
scripts/: install.ps1  install.sh  launch.ps1  launch.sh  sanitize.ps1  sanitize.sh
src/: IA.py  Player.py  README.md  TUI.py  __init__.py  __main__.py  console.py  constants.py  constructor.py  consts.py  core.py  helpers.py  i18n.py  logger.py  main.py  mappings.py  ney.py  tokens.py  translations.json  utils.py
src/AI/: Bot.py
src/models/: __init__.py  bot.py  botv2.py  human.py  player.py
src/playground/: README.md  game_termianl_test.py
src/termui/: __init__.py  _termui.py  banners.py  colors.py  logger.py  pretty.py
src/tests/: benchmarks.py  winner_algorithms_test.py
