[tool.poetry]
name = "boardtoe"
version = "0.1.0"
description = "Game inspired by Tic-Tac-Toe but with boards up to 8x8, based on the terminal."
authors = [
    "Backist <alvarodrumer54@gmail.com>", 
    "TheWisker <thewisker@protonmail.com>"
]
maintainers = [
    "Backist <alvarodrumer54@gmail.com>", 
    "TheWisker <thewisker@protonmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Backist/BoardToe"
documentation = "https://github.com/Backist/BoardToe"

# We use Poetry only as a dependency manager.
package-mode = false 


[tool.poetry.dependencies]
python = ">=3.10.8"
pybeaut = "^1.1.1b0"
pynput = "^1.7.7"
pyperf = "^2.8.0"
ruff = "^0.6.9"
blessed = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
